--- a/Milestone_2.ipynb
+++ b/Milestone_2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "APA5qdQqwL4I",
    "metadata": {
     "id": "APA5qdQqwL4I"
    },
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4a7107aa-131d-41e3-8134-53a4e81a4504",
    "metadata": {
     "id": "4a7107aa-131d-41e3-8134-53a4e81a4504"
    },
@@ -78,7 +76,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imrBB0lCwo1I",
    "metadata": {
     "id": "imrBB0lCwo1I"
    },
@@ -91,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c300ba3c-a04f-48bb-b1ee-b76a8b2154a3",
    "metadata": {
     "id": "c300ba3c-a04f-48bb-b1ee-b76a8b2154a3"
    },
@@ -113,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2f23969-fa62-46d6-a5ec-70193e7d59cb",
    "metadata": {
     "id": "b2f23969-fa62-46d6-a5ec-70193e7d59cb"
    },
@@ -130,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa55913-08cb-417c-9498-4f995b74c78f",
    "metadata": {
     "id": "4fa55913-08cb-417c-9498-4f995b74c78f"
    },
@@ -143,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce63940a-d8fe-4a57-80e3-4f83516a627e",
    "metadata": {},
    "source": [
     "## Here we load the 5 days data to present in this demo"
@@ -152,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43158119-787b-4d2e-b8cc-eff3454c3df1",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +223,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ecf72a-ecf4-4382-91ec-712036ea6463",
    "metadata": {},
    "source": [
     "## Build Tokenizer\n",
@@ -249,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f95b64a0-c915-49b2-8290-28d94d38ea7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +273,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "afa7a64b-ca06-4acd-ba34-73578680e166",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +300,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58790337-7c3b-4cce-82dd-355c086a648a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87c0a857-3fa1-4df2-829e-2dbe55188959",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +338,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c2a6003-bc71-4201-910a-34d9dbe37fd9",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +428,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "Xe4KMI830RVX",
    "metadata": {
     "id": "Xe4KMI830RVX"
    },
@@ -458,7 +443,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "o-KFxU4H0Qkn",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "iy8bePLg2eMo",
    "metadata": {
     "id": "iy8bePLg2eMo"
    },
@@ -531,7 +514,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3849cbc7-ed77-43d2-a6f5-517d37734ee3",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +630,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "IbBW16t3KCVm",
    "metadata": {
     "id": "IbBW16t3KCVm"
    },
@@ -660,7 +641,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "83SUKuaOJkTT",
    "metadata": {
     "id": "83SUKuaOJkTT"
    },
@@ -674,7 +654,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jv1tK-3UdKYK",
    "metadata": {
     "id": "jv1tK-3UdKYK"
    },
@@ -694,7 +673,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "pe1IuCTFLYr4",
    "metadata": {
     "id": "pe1IuCTFLYr4"
    },
@@ -767,7 +745,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5173b954-1ce2-488d-b3f8-814060faf85e",
    "metadata": {},
    "source": [
     "From the above graph, we can get that the best model has 20 topics"
@@ -776,7 +753,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "E2uIui8Stgcf",
    "metadata": {
     "id": "E2uIui8Stgcf"
    },
@@ -1204,7 +1180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "BuyOUYUYtq-x",
    "metadata": {
     "id": "BuyOUYUYtq-x"
    },
@@ -1215,7 +1190,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "wWwTv49ptpfA",
    "metadata": {
     "id": "wWwTv49ptpfA"
    },
@@ -1253,7 +1227,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "00d4cebd-485d-4b53-a94b-fb5ebb8e0eef",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1265,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5P3Qfe1ubJe",
    "metadata": {
     "id": "d5P3Qfe1ubJe",
     "tags": []
@@ -1306,7 +1278,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a-5j1SdxuaRs",
    "metadata": {
     "id": "a-5j1SdxuaRs"
    },
@@ -1341,7 +1312,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nf5WFGc4pbzS",
    "metadata": {
     "id": "nf5WFGc4pbzS"
    },
@@ -1352,7 +1322,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "HiwD9DvRnjM2",
    "metadata": {
     "id": "HiwD9DvRnjM2"
    },
@@ -1420,7 +1389,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7141fa72-4200-4123-9c6f-ba486e2c2028",
    "metadata": {},
    "outputs": [
     {
@@ -1443,7 +1411,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "AjofRLt2pfJt",
    "metadata": {
     "id": "AjofRLt2pfJt"
    },
@@ -1457,7 +1424,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "KziYswP8pnQW",
    "metadata": {
     "id": "KziYswP8pnQW"
    },
@@ -1478,7 +1444,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fH1vSxSWp8BJ",
    "metadata": {
     "id": "fH1vSxSWp8BJ"
    },
@@ -1493,7 +1458,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "Q9Z1id8vp82m",
    "metadata": {
     "id": "Q9Z1id8vp82m"
    },
@@ -1531,7 +1495,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "OiU2EiiUqNSa",
    "metadata": {
     "id": "OiU2EiiUqNSa"
    },
@@ -1543,7 +1506,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "UdvRmT81qKKm",
    "metadata": {
     "id": "UdvRmT81qKKm"
    },
@@ -1580,7 +1542,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b75982b-7e18-4ec8-b0c7-b8fb31954781",
    "metadata": {},
    "source": [
     "we end up with a list of very generic words. These are very common across many descriptions. tfidf attributes a low score to them as a penalty for not being relevant. Words likes people, lot, aa, etc...\n",
@@ -1591,7 +1552,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "oO0OQgCNqfCr",
    "metadata": {
     "id": "oO0OQgCNqfCr"
    },
@@ -1615,7 +1575,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2a60b1-9f96-4924-9bc4-8a284a2d9c54",
    "metadata": {},
    "source": [
     "We end up with less common words. These words naturally carry more meaning for the given description and may outline the underlying topic."
@@ -1623,7 +1582,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ed9fe1-2bbd-4e97-b0cb-cd74511915a3",
    "metadata": {},
    "source": [
     "# Summary  \n",
@@ -1644,7 +1602,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1658,7 +1616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
