--- a/Milestone_2.ipynb
+++ b/Milestone_2.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4c12adbe",
    "metadata": {
     "id": "APA5qdQqwL4I"
    },
@@ -12,24 +13,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "07d98e3b",
    "metadata": {
     "id": "4a7107aa-131d-41e3-8134-53a4e81a4504"
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /home/shanci/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\KFU\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /home/shanci/nltk_data...\n",
+      "[nltk_data]     C:\\Users\\KFU\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
       "[nltk_data]       date!\n",
-      "[nltk_data] Downloading package wordnet to /home/shanci/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\KFU\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to /home/shanci/nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\KFU\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -76,6 +89,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6574000f",
    "metadata": {
     "id": "imrBB0lCwo1I"
    },
@@ -88,6 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "065a0947",
    "metadata": {
     "id": "c300ba3c-a04f-48bb-b1ee-b76a8b2154a3"
    },
@@ -109,6 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "07823b70",
    "metadata": {
     "id": "b2f23969-fa62-46d6-a5ec-70193e7d59cb"
    },
@@ -125,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "61b6365b",
    "metadata": {
     "id": "4fa55913-08cb-417c-9498-4f995b74c78f"
    },
@@ -137,6 +154,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7ac2d1a",
    "metadata": {},
    "source": [
     "## Here we load the 5 days data to present in this demo"
@@ -144,7 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "8202bde6",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +230,7 @@
        "4 2019-01-05  It's turning into this foodie community and th..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,6 +242,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aea7cbef",
    "metadata": {},
    "source": [
     "## Build Tokenizer\n",
@@ -239,7 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "bdd596e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "82f42c14",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +321,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "ae35ec1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "id": "d50f1a77",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5ce95f70cf54090bc7ca6f7c4a76e22",
+       "model_id": "f78299c1a78143bda436d6f4a02990e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -337,7 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "939f523e",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +442,7 @@
        "4  [turning, foodie, community, wanted, fabric, g...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,6 +453,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "19b27359",
    "metadata": {
     "id": "Xe4KMI830RVX"
    },
@@ -443,6 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "300694e8",
    "metadata": {},
    "outputs": [
     {
@@ -467,6 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "aa215177",
    "metadata": {
     "id": "iy8bePLg2eMo"
    },
@@ -514,6 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "7df2e6a0",
    "metadata": {},
    "outputs": [
     {
@@ -630,6 +659,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8906d44c",
    "metadata": {
     "id": "IbBW16t3KCVm"
    },
@@ -641,6 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "8e9a71d3",
    "metadata": {
     "id": "83SUKuaOJkTT"
    },
@@ -654,6 +685,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0d95d38",
    "metadata": {
     "id": "jv1tK-3UdKYK"
    },
@@ -673,6 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "7e71aefa",
    "metadata": {
     "id": "pe1IuCTFLYr4"
    },
@@ -745,6 +778,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39f28e6a",
    "metadata": {},
    "source": [
     "From the above graph, we can get that the best model has 20 topics"
@@ -753,6 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "dbc24821",
    "metadata": {
     "id": "E2uIui8Stgcf"
    },
@@ -1180,6 +1215,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae0c6e0d",
    "metadata": {
     "id": "BuyOUYUYtq-x"
    },
@@ -1190,6 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "b75e9e83",
    "metadata": {
     "id": "wWwTv49ptpfA"
    },
@@ -1227,6 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "a128d752",
    "metadata": {},
    "outputs": [
     {
@@ -1265,6 +1303,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b8577cc",
    "metadata": {
     "id": "d5P3Qfe1ubJe",
     "tags": []
@@ -1278,6 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "3507a2a2",
    "metadata": {
     "id": "a-5j1SdxuaRs"
    },
@@ -1312,6 +1352,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e419873",
    "metadata": {
     "id": "nf5WFGc4pbzS"
    },
@@ -1322,6 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "1f471627",
    "metadata": {
     "id": "HiwD9DvRnjM2"
    },
@@ -1389,6 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "913a5ebc",
    "metadata": {},
    "outputs": [
     {
@@ -1411,6 +1454,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf374c92",
    "metadata": {
     "id": "AjofRLt2pfJt"
    },
@@ -1424,6 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "0adcb30b",
    "metadata": {
     "id": "KziYswP8pnQW"
    },
@@ -1444,6 +1489,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56785114",
    "metadata": {
     "id": "fH1vSxSWp8BJ"
    },
@@ -1458,6 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "bd08ce63",
    "metadata": {
     "id": "Q9Z1id8vp82m"
    },
@@ -1495,6 +1542,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4bd8ab4f",
    "metadata": {
     "id": "OiU2EiiUqNSa"
    },
@@ -1506,6 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "9d59cd62",
    "metadata": {
     "id": "UdvRmT81qKKm"
    },
@@ -1542,6 +1591,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9ed30a6e",
    "metadata": {},
    "source": [
     "we end up with a list of very generic words. These are very common across many descriptions. tfidf attributes a low score to them as a penalty for not being relevant. Words likes people, lot, aa, etc...\n",
@@ -1552,6 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "bbbb167b",
    "metadata": {
     "id": "oO0OQgCNqfCr"
    },
@@ -1575,6 +1626,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9f799204",
    "metadata": {},
    "source": [
     "We end up with less common words. These words naturally carry more meaning for the given description and may outline the underlying topic."
@@ -1582,6 +1634,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9216645e",
    "metadata": {},
    "source": [
     "# Summary  \n",
@@ -1602,7 +1655,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1616,7 +1669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
